--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -10,17 +10,17 @@ body {
   max-width: 1440px;
   width: 100%;
 }
-.line--el {
-  fill: none;
-  stroke: red;
-  stroke-width: 1;
-}
+// .line--el {
+//   fill: none;
+//   stroke: red;
+//   stroke-width: 1;
+// }
 
-.line {
-  fill: none;
-  stroke: red;
-  stroke-width: 1;
-}
+// .line {
+//   fill: none;
+//   stroke: red;
+//   stroke-width: 1;
+// }
 
 @media (max-width: 750px) {
   .container {
